--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
-
+  <title>JavaScript</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="SkillUP Lesson8">
+  <meta name="keywords" content="JavaScript, HTML JavaScript, JavaScript">
+  <meta name="author" content="Макеев Никита">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"></head>
+  <link rel="stylesheet" href="./CSS/style.css">
 <body>
   <h1>LESSON 11 SWITCH</h1>
   
